--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="habit" data-name="sleep">💤</div>
             <div class="habit" data-name="walk with the dog">🐕</div>
             <div class="habit" data-name="healthy food">🥗</div>
+            <div class="habit" data-name="study">📚</div>
         </div><!--habits-->
 
         <div class="days"></div>
